Adjust search record tests for soft-delete aware repository (#339)